--- a/spam_classifier.ipynb
+++ b/spam_classifier.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df= pd.read_csv(\"C:/Users/ASHWIN/Downloads/emails.csv/emails.csv\")"
+    "df= pd.read_csv("emails.csv")//Used the dataset from KAGGLE
    ]
   },
   {
